--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
     <h2 id="education" >Education</h2>
     <div class="sec-1">
-    <h3 class="blue-heading">CodeSpace Bootcamp</h3>
+    <h3 class="orange-heading">CodeSpace Bootcamp</h3>
     <p>Intro to web at <a id="link" href="https://www.codespace.co.za/">codespace.com</a></p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error similique nihil autem, illum cupiditate laborum inventore quibusdam distinctio! Aspernatur ex tempora, rerum facilis placeat ut quas nihil odit adipisci veniam odio magnam ipsa nobis veritatis impedit architecto in blanditiis itaque?</p>
     
-    <h3 class="blue-heading">High School Diploma 2</h3>
+    <h3 class="orange-heading">High School Diploma 2</h3>
     
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error similique nihil autem, illum cupiditate laborum inventore quibusdam distinctio! Aspernatur ex tempora, rerum facilis placeat ut quas nihil odit adipisci veniam odio magnam ipsa nobis veritatis impedit architecto in blanditiis itaque?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error similique nihil autem, illum cupiditate laborum inventore quibusdam distinctio! Aspernatur ex tempora, rerum facilis placeat ut quas nihil odit adipisci veniam odio magnam ipsa nobis veritatis impedit architecto in blanditiis itaque?</p>
@@ -40,7 +40,7 @@
 
     <div class="sec-1">
     <h2 id="experience" >Experience</h2>
-    <h3 class="blue-heading">Job 1</h3>
+    <h3 class="orange-heading">Job 1</h3>
     <ul>
         <li>A sentence about the responsibilities of the job</li>
         <li>A sentence about the responsibilities of the job</li>
@@ -48,7 +48,7 @@
         <li>A sentence about the responsibilities of the job</li>
     </ul>
 
-    <h3 class="blue-heading" >Job 2</h3>
+    <h3 class="orange-heading" >Job 2</h3>
     <ul>
         <li>A sentence about the responsibilities of the job</li>
        <li>A sentence about the responsibilities of the job</li>
@@ -58,7 +58,7 @@
     </ul> 
 </div>
 <div class="sec-2">
-    <h2 id="skills" class="blue-heading">Skills</h2>
+    <h2 id="skills" class="orange-heading">Skills</h2>
     <ul>
         <li> CSS </li>
         <li> HTML </li>
@@ -72,7 +72,7 @@
 <hr>
 
 <footer>
-<h2 id="contact" class="blue-heading">Contact Details</h2>
+<h2 id="contact" class="orange-heading">Contact Details</h2>
 
 <p>Linkedin: <a href="https://www.linkedin.com/in/rehumile-sekoto-860184267/">www.linkedin.com/in/rehumile-sekoto-</a></p>
 <p>Email: <a href="#">www.gmail.com/sekotorehumile1</a></p>
